<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.itechhubsa.bimanage.Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="32dp"
        android:src="@drawable/mainlogo"/>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:background="@drawable/sign_up_edit_style"
            android:gravity="center"
            android:hint="@string/user_name"
            android:id="@+id/etLogin_Email"
            android:inputType="textEmailAddress"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_width="match_parent"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:background="@drawable/sign_up_edit_style"
            android:gravity="center"
            android:hint="@string/enter_password"
            android:id="@+id/etLogin_Password"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_width="match_parent"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/my_buttons"
        android:text="@string/sign_in" />
</LinearLayout>